--- a/aqd-solana/Cargo.toml
+++ b/aqd-solana/Cargo.toml
@@ -3,6 +3,9 @@ name = "aqd-solana"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+clap = { version = "4.4.6", features = ["derive"] }
+anyhow = "1.0.75"
+
+solana-contracts = { path = "../solana-contracts" }
+aqd-utils = { path = "../aqd-utils" }
