--- a/aqd-utils/Cargo.toml
+++ b/aqd-utils/Cargo.toml
@@ -3,6 +3,6 @@ name = "aqd-utils"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+anyhow = "1.0.75"
+toml = "0.8.2"
