feat: put the crates in a separate folder
Signed-off-by: Tarek <tareknaser360@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,4 @@
 [workspace]
-members = [
-    "aqd-core",
-    "aqd-polkadot",
-    "aqd-solana",
-    "aqd-utils",
-    "solana-contracts",
-]
-
-default-members = [
-    "aqd-core",
-    "aqd-polkadot",
-    "aqd-solana",
-    "aqd-utils",
-    "solana-contracts",
-]
+members = ["crates/*"]
 
 resolver = "2"
