--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: Sanity Check Codebase
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  schedule:
+    - cron: '30 1 * * 1'
 
 jobs:
   build:
@@ -16,10 +22,20 @@ jobs:
         toolchain: stable
         override: true
         components: rustfmt, clippy
+    
+    # Install libudev (required for solana crates)
+    - name: Install libudev
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libudev-dev
 
     - name: Check formatting
       run: |
         cargo fmt -- --check
+
+    - name: Check linting
+      run: |
+        cargo clippy
 
     - name: Build and test
       run: |
