--- a/crates/aqd-core/Cargo.toml
+++ b/crates/aqd-core/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 
 
 [dependencies]
+clap = { version = "4.4.6", features = ["derive"] }
+anyhow = "1.0.75"
+
+aqd-solana = { path = "../aqd-solana" }
