--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  # Run every Monday at 1:30 AM UTC
   schedule:
     - cron: '30 1 * * 1'
 
