--- a/crates/aqd-solana/Cargo.toml
+++ b/crates/aqd-solana/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 clap = { version = "4.4.6", features = ["derive"] }
 anyhow = "1.0.75"
 
+solana-cli-config = "1.16.14"
+solana-clap-v3-utils = "1.16.14"
+
 solana-contracts = { path = "../solana-contracts" }
 aqd-utils = { path = "../aqd-utils" }
