--- a/crates/aqd-solana/Cargo.toml
+++ b/crates/aqd-solana/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
 anyhow = "1.0.75"
+serde_json = "1.0.107"
 
 solana-cli-config = "1.16.14"
 solana-clap-v3-utils = "1.16.14"
