--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,32 +54,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y jq libudev-dev
 
-    # Install Solana and restart the shell
+    # Install Solana
     - name: Install Solana
       run: |
           sh -c "$(curl -sSfL https://release.solana.com/v1.17.1/install)"
-          
-    # Restart the shell so that the Solana CLI is in the path
-    - name: Restart shell
-      run: |
-        exec -l $SHELL
-      
-    # Make sure the shell is restarted
-    - name: Restart shell
-      run: |
-        source $HOME/.bashrc
-
-    - name: Check Solana Installation
-      run: |
-        echo "Solana binary path: $(which solana-test-validator)"
-
-    # Ensure nohup writes output to a file, not the terminal.
-    # If we don't, solana-test-validator might not be able to write its
-    # output and exit
-    # We run it early so that it can start up while the rest of the
-    # workflow is running
-    - name: Start Solana Test Validator
-      run: nohup solana-test-validator -q > validator.out
 
     - name: Check out code
       uses: actions/checkout@v3
@@ -96,18 +74,6 @@ jobs:
       run: |
         cargo build --release
         export PATH=$PATH:$(pwd)/target/release
-
-    # Generate a new keypair for the test
-    # This is needed to be able to send transactions on the local test network
-    - name: Generate keypair
-      run: solana-keygen new --no-bip39-passphrase
-
-    # Set the URL to localhost
-    - name: Set Solana URL to localhost
-      run: solana config set --url localhost
-    
-    - name: Air drop 50 SOL (required to send transactions)
-      run: solana airdrop 50
 
     - name: Test Solana CLI
       run: ./solana_cli.sh
