move solana crates out of the crates folder
Signed-off-by: Tarek <tareknaser360@gmail.com>

--- a/crates/aqd-core/Cargo.toml
+++ b/crates/aqd-core/Cargo.toml
@@ -3,9 +3,8 @@ name = "aqd"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
 anyhow = "1.0.75"
 
-aqd-solana = { path = "../aqd-solana" }
+aqd-solana = { path = "../../aqd-solana" }
