--- a/aqd-utils/Cargo.toml
+++ b/aqd-utils/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "aqd-polkadot"
+name = "aqd-utils"
 version = "0.1.0"
 edition = "2021"
 
-
-
 [dependencies]
+anyhow = "1.0.75"
+toml = "0.8.2"
