--- a/crates/aqd-core/Cargo.toml
+++ b/crates/aqd-core/Cargo.toml
@@ -3,8 +3,11 @@ name = "aqd"
 version = "0.1.0"
 edition = "2021"
 
+
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
-anyhow = "1.0.75"
+tokio = "1.33.0"
 
-aqd-solana = { path = "../../aqd-solana" }
+
+aqd-polkadot = { path = "../../aqd-polkadot" }
+# aqd-solana = { path = "../../aqd-solana", optional = true }
