--- a/crates/aqd-core/Cargo.toml
+++ b/crates/aqd-core/Cargo.toml
@@ -8,6 +8,4 @@ edition = "2021"
 clap = { version = "4.4.6", features = ["derive"] }
 tokio = "1.33.0"
 
-
-aqd-polkadot = { path = "../../aqd-polkadot" }
-# aqd-solana = { path = "../../aqd-solana", optional = true }
+aqd-solana = { path = "../aqd-solana" }
