--- a/crates/solana-contracts/Cargo.toml
+++ b/crates/solana-contracts/Cargo.toml
@@ -31,3 +31,6 @@ convert_case = "0.6.0"
 byte-slice-cast = "1.2.2"
 sha2 = "0.10.8"
 num-traits = "0.2"
+
+# For Printing macros
+aqd-utils = { path = "../aqd-utils" }
