--- a/crates/aqd-polkadot/Cargo.toml
+++ b/crates/aqd-polkadot/Cargo.toml
@@ -14,6 +14,6 @@ serde = "1.0.189"
 
 sp-core = "22.0.0"
 subxt = "0.32.1"
-contract-extrinsics = { git = "https://github.com/paritytech/cargo-contract" }
-contract-build = { git = "https://github.com/paritytech/cargo-contract" }
+contract-extrinsics = { git = "https://github.com/paritytech/cargo-contract", rev = "dfdc768bc430ba6e2967a482cb3016dba3785726" }
+contract-build = { git = "https://github.com/paritytech/cargo-contract", rev = "dfdc768bc430ba6e2967a482cb3016dba3785726" }
 aqd-utils = { path = "../aqd-utils" }
