--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,10 +69,10 @@ jobs:
       working-directory: ./integration/solana
       run: ./setup_solana.sh
     
-    # Compile Aqd in release mode
+    # Compile Aqd in release mode 
     - name: Compile Aqd 
       run: |
-        cargo build --release
+        cargo build --features "solana" --release
    
     # Run Solana integration tests
     - name: Test Solana CLI
@@ -88,7 +88,7 @@ jobs:
     - name: Install jq 
       run: |
         sudo apt-get update
-        sudo apt-get install -y jq
+        sudo apt-get install -y jq libudev-dev
 
     - name: Check out code
       uses: actions/checkout@v3
@@ -111,7 +111,7 @@ jobs:
     # Compile Aqd in release mode
     - name: Compile Aqd 
       run: |
-        cargo build --release
+        cargo build --features "polkadot" --release
     
     # Run Polkadot integration tests
     - name: Test Polkadot CLI
