--- a/crates/aqd-core/Cargo.toml
+++ b/crates/aqd-core/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2021"
 clap = { version = "4.4.7", features = ["derive"] }
 tokio = "1.33.0"
 
+aqd-polkadot = { path = "../aqd-polkadot", optional = true }
+aqd-solana = { path = "../aqd-solana", optional = true }
 
-aqd-polkadot = { path = "../aqd-polkadot" }
-aqd-solana = { path = "../aqd-solana" }
+
+[features]
+default = ["polkadot", "solana"]
+polkadot = ["aqd-polkadot"]
+solana = ["aqd-solana"]
