--- a/crates/aqd-core/Cargo.toml
+++ b/crates/aqd-core/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
-tokio = "1.33.0"
 
+# tokio is only needed for polkadot target
+tokio = { version = "1.33.0", optional = true }
 aqd-polkadot = { path = "../aqd-polkadot", optional = true }
+
 aqd-solana = { path = "../aqd-solana", optional = true }
 
 
 [features]
 default = ["polkadot", "solana"]
-polkadot = ["aqd-polkadot"]
+polkadot = ["aqd-polkadot", "tokio"]
 solana = ["aqd-solana"]
